--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="input-group-prepend">
                             <button type="button" class="btn btn-success" id="minus">&minus;</button>
                         </div>
-                        <input type="number" class="form-control text-center" disabled id="member_project" value="1">
+                        <input type="number" class="form-control text-center" disabled id="member_project">
                         <div class="input-group-append">
                             <button type="button" class="btn btn-success" id="add">&#x2b;</button>
                         </div>
@@ -51,6 +51,7 @@
             </div>
         </div>
 
+        <br>
         <div class="card shadow" style="border: 5px solid pink" id="card">
             <div class="card-body">
                 <div class="row">
