--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     body {
-        background-image: url(pink.jpg);
+        background-image: url(goodfood.jpg);
         background-size: cover;
     }
 </style>
@@ -36,7 +36,7 @@
 
                 </div>
                 <div class="col-3">
-                    <h5 style="color: rgb(46, 37, 43)" class="text-center" id="num">Number of person</h5>
+                    <h5 style="color: rgb(46, 37, 43)" class="text-center" id="num">Number Of Person</h5>
                     <div class="input-group mb-3" id="action">
                         <div class="input-group-prepend">
                             <button type="button" class="btn btn-success" id="minus">&minus;</button>
@@ -65,6 +65,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/project.js"></script>
